--- a/R/REPORT_GENERATOR.Rmd
+++ b/R/REPORT_GENERATOR.Rmd
@@ -343,70 +343,108 @@ Principal component analysis of untargeted metabolomics data. Two-dimensional PC
 
 ```{r}
 if(batch_correct %in% c("limma","ComBat")){
-#We want to remove the metadata row(s) and all non sample cols from Client_Data_Download
- PCA_DATA <- t(rbind(Client_Data_Download_out[["Neg.normalized.data"]][,3:(num_samples+2)],
- Client_Data_Download_out[["Pos.normalized.data"]][-(1:num_of_metadata-1),3:(num_samples+2)]))
+library(plotly)
+library(RColorBrewer)
+library(car)
 
-numsonly <- data.frame(PCA_DATA[,-c(1:num_of_metadata-1)])
-#Make numeric
-
-numsonly <- data.frame(lapply(numsonly,as.numeric))
-pca_res <- prcomp(numsonly, center = TRUE, scale. = FALSE,rank. = 2) #The old version used the defaults
-
-scores <- pca_res$x
-
-colors <- RColorBrewer::brewer.pal(num_batches, "Set1")
-# Function to plot ellipse for each target
-plot_ellipse_function <- function(target) {
-  target_data <- as.data.frame(scores[PCA_DATA[,(num_of_metadata-1)] == target, 1:2])
-  target_color <- colors[which(unique(PCA_DATA[,(num_of_metadata-1)]) == target)]
+plot_pca <- function(data, show_legend = TRUE) {
+  PCA_DATA <- t(rbind(data[["Neg"]][,3:(num_samples+2)],
+                      data[["Pos"]][-(1:num_of_metadata-1),3:(num_samples+2)]))
   
-  # Ellipse
-  ellipse_coords <- car::dataEllipse(target_data$PC1, target_data$PC2, 
-                                     levels = 0.68, # roughly corresponds to 1 std dev
-                                     plot.points = FALSE, add = TRUE, draw = FALSE)
+  numsonly <- data.frame(PCA_DATA[,-c(1:num_of_metadata-1)])
+  numsonly <- data.frame(lapply(numsonly, as.numeric))
+  pca_res <- prcomp(numsonly, center = TRUE, scale. = FALSE, rank. = 2)
   
-  fig <<- fig %>% 
-    add_polygons(x = ellipse_coords[,1], y = ellipse_coords[,2],
-                 line = list(color = target_color, dash = "dot"),
-                 fillcolor = target_color, opacity = 0.3,
-                 showlegend = F,
-                 hoverinfo = "skip")  # this tells plotly not to show any hover information for the ellipses
+  scores <- pca_res$x
+  colors <- RColorBrewer::brewer.pal(num_batches, "Set1")
+  
+  plot_ellipse_function <- function(target) {
+    target_data <- as.data.frame(scores[PCA_DATA[,(num_of_metadata-1)] == target, 1:2])
+    target_color <- colors[which(unique(PCA_DATA[,(num_of_metadata-1)]) == target)]
+    
+    ellipse_coords <- car::dataEllipse(target_data$PC1, target_data$PC2, 
+                                       levels = 0.68, 
+                                       plot.points = FALSE, add = TRUE, draw = FALSE)
+    
+    fig <<- fig %>% 
+      add_polygons(x = ellipse_coords[,1], y = ellipse_coords[,2],
+                   line = list(color = target_color, dash = "dot"),
+                   fillcolor = target_color, opacity = 0.3,
+                   showlegend = FALSE,
+                   hoverinfo = "skip")
+  }
+  
+  plot_points_function <- function(target) {
+    target_data <- as.data.frame(scores[PCA_DATA[,(num_of_metadata-1)] == target, 1:2])
+    rownames(target_data) <- rownames(PCA_DATA)[PCA_DATA[,(num_of_metadata-1)] == target]
+    target_color <- colors[which(unique(PCA_DATA[,(num_of_metadata-1)]) == target)]
+    
+    text_data <- as.character(rownames(target_data))
+    PC1 <- as.numeric(target_data$PC1)
+    PC2 <- as.numeric(target_data$PC2)
+    
+    fig <<- fig %>% 
+      add_trace(data = target_data,
+                x = ~PC1, y = ~PC2, 
+                type = "scatter",
+                mode = "markers",
+                name = target,
+                marker = list(color = target_color),
+                text = ~text_data,
+                hoverinfo = "text",
+                showlegend = show_legend)
+  }
+  
+  fig <- plot_ly()
+  
+  invisible(lapply(unique(PCA_DATA[,(num_of_metadata-1)]), plot_ellipse_function))
+  invisible(lapply(unique(PCA_DATA[,(num_of_metadata-1)]), plot_points_function))
+  
+  fig <- fig %>% layout(xaxis = list(title = 'PC1'), yaxis = list(title = 'PC2'))
+  return(fig)
 }
 
-# Function to plot points for each target
-plot_points_function <- function(target) {
-  target_data <- as.data.frame(scores[PCA_DATA[,(num_of_metadata-1)] == target, 1:2])
-  rownames(target_data) <- rownames(PCA_DATA)[PCA_DATA[,(num_of_metadata-1)]==target]
-  target_color <- colors[which(unique(PCA_DATA[,(num_of_metadata-1)]) == target)]
-  
-  text_data <- as.character(rownames(target_data))
-  PC1 <- as.numeric(target_data$PC1)
-  PC2 <- as.numeric(target_data$PC2)
+pre_data <- list(
+  Neg = Client_Data_Download_out[["Neg.processed.data"]],
+  Pos = Client_Data_Download_out[["Pos.processed.data"]]
+)
 
-  # Scatter points
-  fig <<- fig %>% 
-    add_trace(data = target_data,
-              x = ~PC1, y = ~PC2, 
-              type = "scatter",
-              mode = "markers",
-              name = target,
-              marker = list(color = target_color),
-              text = ~text_data,
-              hoverinfo = "text")  # this tells plotly to display the text when hovering
+post_data <- list(
+  Neg = Client_Data_Download_out[["Neg.normalized.data"]],
+  Pos = Client_Data_Download_out[["Pos.normalized.data"]]
+)
+
+pre_plot <- plot_pca(pre_data, show_legend = TRUE)
+post_plot <- plot_pca(post_data, show_legend = FALSE)
+
+# Combine the two plots side by side without sharing the Y axis
+combined_plot <- subplot(pre_plot, post_plot, nrows = 1, shareY = FALSE)
+
+annotations = list( 
+  list( 
+    x = 0.2,  
+    y = 1.0,  
+    text = "PCA of samples by batch before batch correction",  
+    xref = "paper",  
+    yref = "paper",  
+    xanchor = "center",  
+    yanchor = "bottom",  
+    showarrow = FALSE 
+  ),  
+  list( 
+    x = 0.8,  
+    y = 1,  
+    text = "PCA of samples by batch after batch correction",  
+    xref = "paper",  
+    yref = "paper",  
+    xanchor = "center",  
+    yanchor = "bottom",  
+    showarrow = FALSE
+  ))
+
+combined_plot <- combined_plot %>%layout(annotations = annotations) 
+combined_plot
 }
-
-fig <- plot_ly()
-
-# First loop: Plot all ellipses
-invisible(lapply(unique(PCA_DATA[,(num_of_metadata-1)]), plot_ellipse_function))
-
-# Second loop: Plot all points
-invisible(lapply(unique(PCA_DATA[,(num_of_metadata-1)]), plot_points_function))
-
-fig
-}
-rm(fig)
 ```
 
 ```{r}
