Corrected conditional PCA subtitles

--- a/R/REPORT_GENERATOR.Rmd
+++ b/R/REPORT_GENERATOR.Rmd
@@ -342,7 +342,7 @@ Following analysis of all compounds detected in positive and negative ionization
 
 Principal component analysis of untargeted metabolomics data. Two-dimensional PCA score plots reveal possible separation in metabolite profiles related to variables of interest. Ellipses are calculated using the R package car (Fox J. and Weisberg S. 2019) and ~1 Std dev.
 
-`r if(subset) {cat("**PCA of all study samples that were included in batch-correction and normalization prior to statistical analysis, colored by batch.**")}`
+`r ifelse(subset, "**PCA of all study samples that were included in batch-correction and normalization prior to statistical analysis, colored by batch.**", "")`
 
 ```{r}
 if(batch_correct %in% c("limma","ComBat")){
@@ -351,8 +351,8 @@ library(RColorBrewer)
 library(car)
 
 plot_pca <- function(data, show_legend = TRUE) {
-  PCA_DATA <- t(rbind(data[["Neg"]][,3:(num_samples+2)],
-                      data[["Pos"]][-(1:num_of_metadata-1),3:(num_samples+2)]))
+  PCA_DATA <- t(rbind(data[["Neg"]][,3:(num_total_samples+2)],
+                      data[["Pos"]][-(1:num_of_metadata-1),3:(num_total_samples+2)]))
   
   numsonly <- data.frame(PCA_DATA[,-c(1:num_of_metadata-1)])
   numsonly <- data.frame(lapply(numsonly, as.numeric))
@@ -456,7 +456,8 @@ combined_plot
 }
 ```
 
-`r if(subset) {cat("**PCA of samples included in statistical analysis, colored by group.**")}`
+`r ifelse(subset, "**PCA of samples included in statistical analysis, colored by group.**", "")`
+
 
 ```{r}
 #We want to remove the metadata row(s) and all non sample cols from Client_Data_Download
