--- a/R/REPORT_GENERATOR.Rmd
+++ b/R/REPORT_GENERATOR.Rmd
@@ -152,7 +152,7 @@ Study Summary: `r StudySummary`
 
 ## Sample Information</span>
 
-`r if(subset) {paste("This report is an analysis of", nrow(Client_Data_Download$metadata %>% filter(!str_detect(Sample.name, "Pool"))), SampleType, "as shown below. Classes with 0 samples were included in batch-correction and normalization but omitted from statistical analysis.")}`
+`r if(subset) {paste("This report is an analysis of", nrow(Client_Data_Download$metadata %>% filter(!str_detect(Sample.name, "Pool"))), SampleType, "as shown below. Classes with 0 samples were included in normalization but omitted from statistical analysis.")}`
 
 `r if (!subset) {paste("The PI provided", nrow(Client_Data_Download$metadata %>% filter(!str_detect(Sample.name, "Pool"))), SampleType)}`
 
